QSF - Candidate Referral/src/objects/QSF_RFL_Candidate_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>QSF_RFL_Application__c</referenceTo>
        <relationshipLabel>Candidate Skills</relationshipLabel>
        <relationshipName>Candidate_Skills</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Skill__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Required Skill</label>
        <referenceTo>QSF_RFL_Required_Skill__c</referenceTo>
        <relationshipLabel>Candidate Skills</relationshipLabel>
        <relationshipName>Required_Skills</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <formula>Required_Skill__r.Mandatory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <formula>Required_Skill__r.Skill__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill</label>
        <type>Text</type>
    </fields>
    <label>Candidate Skill</label>
    <nameField>
        <label>Skill Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Skills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>